--- a/components/model/CMakeLists.txt
+++ b/components/model/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "DHT22.c" "model.c"
+idf_component_register(SRCS "model.c"
                     INCLUDE_DIRS "include" "../open62541lib/include"
-                    REQUIRES "driver")
+                    REQUIRES "driver" "dht")
 component_compile_options(-Wno-error=format= -Wno-format)
